--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 *.pyc
 /.idea
 /venv
+crawlers/migrations/__init__.py
+.idea/misc.xml
+.idea/zhihu_django.iml
+account/migrations/0001_initial.py
+1.cmd
