--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ crawlers/migrations/__init__.py
 .idea/zhihu_django.iml
 account/migrations/0001_initial.py
 1.cmd
+crawlers/migrations/0001_initial.py
+crawlers/migrations/0002_auto_20211019_1639.py
