--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 *.pyc
 /.idea
 /venv
-crawlers/migrations/__init__.py
-.idea/misc.xml
-.idea/zhihu_django.iml
-account/migrations/0001_initial.py
+*/migrations/*
+
 1.cmd
-crawlers/migrations/0001_initial.py
-crawlers/migrations/0002_auto_20211019_1639.py
+
